# e2voc

./: pyproject.toml  requirements.txt  requirements_test.txt
src/: c3voc.py
tests/: test_update_streams_v2.py
tests/data/: epg.db
tests/data/33C3/: epg.sql  userbouquet.c3voc__radio_.radio  userbouquet.c3voc__tv_.tv  v2.json
tests/data/divoc/: epg.sql  userbouquet.c3voc__radio_.radio  userbouquet.c3voc__tv_.tv
tests/data/divoc/divoc-bb3/schedule/export/: schedule.xml
tests/data/fossgis2022/: epg.sql  userbouquet.c3voc__radio_.radio  userbouquet.c3voc__tv_.tv  v2.json
tests/data/fossgis2022/schedule/export/: schedule.xml
tests/data/gpw2022/: epg.sql  schedule.xml  userbouquet.c3voc__tv_.tv  v2.json
tests/data/rC3/: bouquets.radio  bouquets.tv  channels.schedule.xml  epg.sql  userbouquet.c3voc__radio_.radio  userbouquet.c3voc__tv_.tv  v2.json
tests/data/rC3_21/: bouquets.radio  bouquets.tv  epg.sql  streams.schedule.xml  userbouquet.c3voc__radio_.radio  userbouquet.c3voc__tv_.tv  v2.json
tests/data/revision/: epg.sql  revision-schedule.xml  v2.json
tests/data/wk22/: epg.sql  userbouquet.c3voc__tv_.tv  v2.json
tests/data/wk22/schedule/export/: schedule.xml
